Adding pickles to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ p1-texts/novels/
 p2-texts/
 zips/
 z_functs/ # a dir for paths etc.
-
+pickles # adding to save the 1GB file from uploads
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -202,3 +202,4 @@ cython_debug/
 zips/p1-texts.zip
 snips.txt
 .gitignore
+pickles/parsed.pickle
